--- a/src/app/tienda/tienda.component.html
+++ b/src/app/tienda/tienda.component.html
@@ -3,10 +3,23 @@
 
   <!-- Icono de cesta -->
   <div class="cesta-icon" (click)="toggleCesta()">
-    <i class="fas fa-shopping-cart"></i>
-    <span *ngIf="productosEnCesta.length > 0">{{ productosEnCesta.length }}</span> <!-- Muestra el número de productos en la cesta -->
+    <i class="fas fa-shopping-cart"></i> Cesta ({{ productosEnCesta.length }})
   </div>
 
+  <!-- Sección de la cesta (desplegable) -->
+  <div class="cesta" *ngIf="isCestaVisible">
+    <h2>Cesta</h2>
+
+    <div *ngFor="let producto of productosEnCesta" class="producto-cesta">
+      <img [src]="producto.imgProducto" alt="{{ producto.nombreProducto }}" class="imagen-cesta">
+      <h2>{{ producto.nombreProducto }}</h2>
+      <p>Precio: {{ producto.precioProducto | currency }}</p>
+      <i class="fas fa-trash" (click)="eliminarDeCesta(producto)" title="Eliminar producto"></i>
+
+    </div>
+    <h3>Total: {{ getTotalCesta() | currency }}</h3>
+    <div *ngIf="productosEnCesta.length === 0">No hay productos en la cesta.</div>
+  </div>
 
   <!-- Barra de filtros -->
   <div class="filtros">
@@ -45,22 +58,7 @@
       <img [src]="producto.imgProducto" alt="{{ producto.nombreProducto }}" class="producto-imagen">
       <h2>{{ producto.nombreProducto }}</h2>
       <p>Precio: {{ producto.precioProducto | currency }}</p>
-      <button (click)="agregarACesta(producto)">Comprar</button> <!-- Llama al método agregarACesta -->
+      <button (click)="agregarACesta(producto)">Comprar</button>
     </div>
   </div>
-
-<!-- Sección de la cesta -->
-
 </div>
-
-
-
-  <div *ngFor="let producto of productosEnCesta" class="cesta-card">
-    <img [src]="producto.imgProducto" alt="{{ producto.nombreProducto }}" class="cesta-imagen">
-    <h2 class="titulo-cesta">{{ producto.nombreProducto }}</h2>
-    <p class="parrafo-cesta">Precio: {{ producto.precioProducto | currency }}</p>
-    <i class="fas fa-trash" (click)="eliminarDeCesta(producto)" title="Eliminar producto"></i> <!-- Icono para eliminar -->
-  </div>
-  <div *ngIf="productosEnCesta.length === 0">La cesta está vacía</div>
-
-
