--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -37,3 +37,28 @@ body{
 .overlay-content button:hover {
   background-color: #e1b707;
 }
+
+
+h1 {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.bienvenidos {
+  color: rgb(255, 255, 255);
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+}
+
+
+.cinema {
+  color: #1ef8af;
+  font-family: 'Orbitron', sans-serif;
+    font-weight: 700;
+}
+
+button {
+  margin-top: 20px;
+  padding: 10px 20px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+}
