--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -3,13 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
   <title>Bienvenidos al Cine</title>
   <style>
   </style>
 </head>
 <body>
   <div class="overlay-content">
-    <h1 class="ml12">Bienvenidos a Cinema</h1>
+    <h1 class="ml12">
+      <span class="bienvenidos">Bienvenidos a</span> <span class="cinema"> Cinema</span>
+    </h1>
     <app-slider></app-slider>
     <button onclick="window.location.href='/movieList'">Entrar</button>
   </div>
