--- a/src/app/tienda/tienda.component.html
+++ b/src/app/tienda/tienda.component.html
@@ -1,5 +1,5 @@
 <div class="tienda-container">
-  <h1>Tienda</h1>
+
 
   <!-- Icono de cesta -->
   <div class="cesta-icon" (click)="toggleCesta()">
@@ -28,6 +28,7 @@
       <option value="">Todas</option>
       <option value="Star Wars">Star Wars</option>
       <option value="Vengadores">Vengadores</option>
+      <option value="Harry Potter">Harry Potter</option>
       <!-- Añade más opciones de categoría según tus necesidades -->
     </select>
 
@@ -50,13 +51,15 @@
       <option [ngValue]="1000">1000</option>
       <!-- Añade más opciones según tus necesidades -->
     </select>
+
+    <button (click)="ReiniciarFiltro()">Reiniciar</button>
   </div>
 
   <!-- Lista de productos -->
   <div class="productos">
     <div *ngFor="let producto of productosFiltrados" class="producto-card">
       <img [src]="producto.imgProducto" alt="{{ producto.nombreProducto }}" class="producto-imagen">
-      <h2>{{ producto.nombreProducto }}</h2>
+      <h2 class="nombreProducto">{{ producto.nombreProducto }}</h2>
       <p>Precio: {{ producto.precioProducto | currency }}</p>
       <button (click)="agregarACesta(producto)">Comprar</button>
     </div>
