--- a/src/app/login-modal/login-modal.component.html
+++ b/src/app/login-modal/login-modal.component.html
@@ -1,17 +1,18 @@
 <div class="modal-overlay" (click)="closeModal()"></div>
 <div class="modal-content" *ngIf="isLogin; else isRegister">
   <h3>Iniciar Sesión</h3>
-  <form (ngSubmit)="onSubmit()">
+  <form [formGroup]="inicioForm" (ngSubmit)="onSubmit()">
     <label for="username">Usuario:</label>
-    <input type="text" id="username" [(ngModel)]="username" name="username" required>
+    <input type="text" id="username" formControlName="username" name="username" required>
 
     <label for="password">Contraseña:</label>
-    <input type="password" id="password" [(ngModel)]="password" name="password" required>
+    <input type="password" id="password" formControlName="password" name="password" required>
 
-    <button type="submit">Iniciar Sesión</button>
+    <button type="submit" [disabled]="!inicioForm.valid">Iniciar Sesión</button>
   </form>
   <button (click)="isLogin = false">Registrar</button> <!-- Asegúrate de que este botón llama a onRegister -->
 </div>
+
 <ng-template #isRegister>
   <div class="modal-content">
     <div class="formulario-registro">
