--- a/src/app/movie-detail/movie-detail.component.html
+++ b/src/app/movie-detail/movie-detail.component.html
@@ -9,6 +9,15 @@
     </div>
   </div>
 
+  <!-- Contenedor de actores -->
+   <!-- <div class="actors-container">
+    <div *ngFor="let actor of actors" class="actor-card">
+      <img *ngIf="actor.profile_path" [src]="'https://image.tmdb.org/t/p/w200' + actor.profile_path" [alt]="actor.name">
+       <p>{{ actor.name }}</p>
+    </div>
+  </div> -->
+
+
   <div class="thumbnail-button-container">
     <div class="thumbnail-container">
       <img *ngFor="let backdrop of backdrops" [src]="backdrop" class="thumbnail" (click)="openImage(backdrop)">
@@ -18,5 +27,20 @@
   <!-- Contenedor para la imagen ampliada -->
   <div *ngIf="selectedImage" class="overlay" (click)="closeImage()">
     <img [src]="selectedImage" class="enlarged-image">
+  </div>
+
+  <!-- Modal para mostrar la sinopsis -->
+  <div *ngIf="showSynopsisModal" class="modal-overlay" (click)="closeSynopsisModal()">
+    <div class="modal-content" (click)="$event.stopPropagation()">
+      <h3>Sinopsis</h3>
+      <div class="actors-container">
+        <div *ngFor="let actor of actors" class="actor-card">
+          <img *ngIf="actor.profile_path" [src]="'https://image.tmdb.org/t/p/original' + actor.profile_path" [alt]="actor.name">
+          <p class="actor-name">{{ actor.name }}</p> <!-- Aquí se aplica la clase actor-name -->
+        </div>
+      </div>
+      <p>{{ movie.overview }}</p>
+      <button (click)="closeSynopsisModal()">Cerrar</button>
+    </div>
   </div>
 </div>
