--- a/src/app/movie-list/movie-list.component.css
+++ b/src/app/movie-list/movie-list.component.css
@@ -4,12 +4,13 @@
   background-size: cover; /* La imagen cubrirá todo el fondo */
   background-position: center; /* Centra la imagen */
   background-repeat: no-repeat; /* Evita que se repita */
-  padding-left: 220px;
+  padding-left: 245px;
   padding-right: 30px;
   padding-top: 15px;
   display: grid; /* Mantiene el diseño de grid */
-  grid-template-columns: repeat(auto-fill, minmax(190px, 1fr)); /* Crea columnas automáticas */
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* Crea columnas automáticas */
   gap: 15px; /* Espacio entre las tarjetas de películas */
+  row-gap: 15px;
   min-height: 100vh; /* Asegura que la altura mínima sea 100% de la vista */
   justify-items: center; /* Centra cada elemento dentro de la celda de la cuadrícula */
   position: relative; /* Para posicionar el h2 en el contenedor */
@@ -32,14 +33,14 @@
 }
 
 .movie-card:hover {
-  transform: scale(1.04);
+  transform: scale(1.02);
 }
 
 .movie-card img {
-  width: 250px;
+  width: 360px;
   height: 100%;
   max-width: 100%;
-  border: 1px solid #000000;
+  border: 2px solid #ee850d;
   border-radius: 8px;
   box-shadow: 2px 10px 6px rgba(0, 0, 0, 0.8);
 }
@@ -64,5 +65,5 @@
 }
 
 h1{
-  font-size: 15px;
+  font-size: 25px;
 }
