--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,46 +1,8 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
-<header *ngIf="isMovieDetailsPage()">
-  <div class="icon-container">
-    <i class="fa-solid fa-ticket" id="icono"></i>
-    <span class="tituloLogo">CINEMA</span>
-  </div>
-  <nav>
-    <div class="nav-item">
-      <a [routerLink]="['/']"><i class="fas fa-home"></i> Inicio</a>
-    </div>
-    <hr class="divider">
-    <div class="nav-item">
-      <a [routerLink]="['/movieList']" routerLinkActive="active"><i class="fa-solid fa-film"></i> Cartelera</a>
-    </div>
-    <hr class="divider">
-    <div class="nav-item">
-      <a routerLink="/tienda" routerLinkActive="active"><i class="fas fa-shopping-cart"></i> Tienda</a>
-    </div>
-    <hr class="divider">
-    <div class="nav-item">
-      <a routerLink="/contacto" routerLinkActive="active"><i class="fas fa-envelope"></i> Contacto</a>
-    </div>
-    <hr class="divider">
-    <div class="nav-item">
-      <a *ngIf="!userName" (click)="openModal()"><i class="fas fa-sign-in-alt"></i> Login</a>
-      <a *ngIf="userName" (click)="logout()"><i class="fas fa-sign-out-alt"></i> Salir</a>
-    </div>
-    <div *ngIf="userName" class="opciones-user">
-      <div *ngIf="userName" class="user-info">
-        <p>Bienvenido, {{ userName }}</p>
-      </div>
-      <hr class="dividerUser">
-      <a routerLink="/tienda" routerLinkActive="active"><i class="fa-solid fa-clapperboard"></i> Mi lista</a>
-      <hr class="dividerUser">
-      <a routerLink="/top250" routerLinkActive="active"><i class="fa-solid fa-trophy"></i> Top 250</a>
-      <hr class="dividerUser">
-      <a routerLink="/perfil" routerLinkActive="active"><i class="fa-solid fa-head-side-virus"></i> Ver perfil</a>
-    </div>
-  </nav>
 
-</header>
+<app-header></app-header>
 <!-- Muestra el contenido de las rutas -->
 <router-outlet></router-outlet>
 
